--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.5.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
